--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=CadastroDeNinjas
+
+# Configuração do banco H2 em memória
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
+
+# Configuração do JPA // HIBERNATE
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
